--- a/client/public/index.html
+++ b/client/public/index.html
@@ -19,7 +19,8 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Crypto Chart</title>
+    <script src="/socket.io/socket.io.js"></script>
   </head>
   <body>
     <noscript>
